--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -47,7 +47,7 @@ body .menu ul li a {
 
 body .menu ul li a::after {
   display: block;
-  content: '';
+  content: "";
   width: 0;
   height: 2px;
   background-color: #F2F4F3;
@@ -57,6 +57,10 @@ body .menu ul li a::after {
 
 body .menu ul li:hover a::after {
   width: 100%;
+}
+
+body .menu .button {
+  display: none;
 }
 
 body .container {
@@ -114,7 +118,50 @@ body .container .img2 {
 }
 
 body .container .img3 {
+  background-image: url("../images/bg3.jpg");
+  min-height: 75vh;
+}
+
+body .container .img4 {
   background-image: url("../images/bg1.jpg");
   min-height: 75vh;
+}
+
+@media only screen and (max-width: 500px) {
+  body .menu {
+    opacity: 1;
+  }
+  body .menu ul {
+    display: none;
+  }
+  body .menu .button {
+    cursor: pointer;
+    background-color: #49111C;
+    width: 100%;
+    padding: 10px 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 2rem;
+    position: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  body .container .article__image {
+    background-attachment: scroll;
+  }
+  body .container .article__image .image__text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 2rem;
+  }
+  body .container .article .section {
+    padding: 50px 40px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
