--- a/assets/style/_desktop.scss
+++ b/assets/style/_desktop.scss
@@ -7,7 +7,7 @@ body {
     left: 0;
     top: 0;
     z-index: 10;
-    opacity: 0.8;
+    opacity: 0.95;
     background-color: $secondaryBg;
 
     &__option {
@@ -66,7 +66,7 @@ body {
     scroll-snap-type: y mandatory;
 
     .scroll {
-      scroll-snap-align: center;
+      scroll-snap-align: start;
     }
 
     .article {
@@ -109,17 +109,17 @@ body {
 
     .img2 {
       background-image: url("../images/bg2.jpg");
-      min-height: 75vh;
+      min-height: 300px;
     }
 
     .img3 {
       background-image: url("../images/bg3.jpg");
-      min-height: 75vh;
+      min-height: 300px;
     }
 
     .img4 {
       background-image: url("../images/bg1.jpg");
-      min-height: 75vh;
+      min-height: 300px;
     }
   }
 }
