--- a/assets/style/_desktop.scss
+++ b/assets/style/_desktop.scss
@@ -17,16 +17,19 @@ body {
         padding: 10px;
 
         li {
+          padding: 10px;
+
           &:first-child {
             display: none;
           }
 
-          cursor: pointer;
           list-style: none;
           letter-spacing: 3px;
-          padding: 10px;
 
           a {
+
+            cursor: pointer;
+            height: 100%;
             text-decoration: none;
             font-weight: bold;
             color: $textColor;
