--- a/assets/style/_page800p_content.scss
+++ b/assets/style/_page800p_content.scss
@@ -2,7 +2,9 @@ body {
     .container {
         .article {
             .section {
-                padding-bottom: 0;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-bottom: 5px;
 
                 .panel {
                     height: 400px;
